# contour

./: .gitignore  CMakeLists.txt
examples/: search.1  search.2  search.3  search.4  search.5  simple.1  simple.2
src/: CMakeLists.txt  main.c  util.c  util.h
src/config/: config.c  config.h  yacjs.c  yacjs_name.h
src/log/: log.c  log.h
src/parser/: parser.c  parser.h
src/prover/: interface.c  interface.h  proof.c  proof.h  rules.c  rules.h
src/str/: u8s.h
src/tree/: node.c  node.h
